--- a/TwinklyWall/twinklywall.service
+++ b/TwinklyWall/twinklywall.service
@@ -11,6 +11,8 @@ Environment="PATH=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin:/usr/local
 Environment="PYTHONUNBUFFERED=1"
 Environment="FPP_MODEL_NAME=Light Wall"
 ExecStart=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin/python main.py --mode api
+KillSignal=SIGINT
+TimeoutStopSec=15
 Restart=always
 RestartSec=10
 StandardOutput=journal
