--- a/led_matrix_controller/pubspec.yaml
+++ b/led_matrix_controller/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image: ^4.1.0
   path_provider: ^2.1.0
   http: ^1.1.0
+  async: ^2.11.0
   
 dev_dependencies:
   riverpod_generator: ^2.3.0
