--- a/TwinklyWall/ddp_bridge.service
+++ b/TwinklyWall/ddp_bridge.service
@@ -10,7 +10,7 @@ WorkingDirectory=/home/fpp/TwinklyWall_Project/TwinklyWall
 Environment="PATH=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 Environment="PYTHONUNBUFFERED=1"
 Environment="FPP_MODEL_NAME=Light Wall"
-ExecStart=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin/python ddp_bridge.py --port 4049 --width 90 --height 50 --model "Light_Wall"
+ExecStart=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin/python ddp_bridge.py --port 4049 --width 90 --height 50 --model "$FPP_MODEL_NAME"
 Restart=always
 RestartSec=2
 StandardOutput=journal
