--- a/led_matrix_controller/pubspec.yaml
+++ b/led_matrix_controller/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   ffi: ^2.1.0
   uuid: ^4.0.0
   shared_preferences: ^2.2.0
+  file_picker: ^8.0.0
   
 dev_dependencies:
   riverpod_generator: ^2.3.0
