--- a/led_matrix_controller/pubspec.yaml
+++ b/led_matrix_controller/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   uuid: ^4.0.0
   shared_preferences: ^2.2.0
   file_picker: ^8.0.0
+  video_player: ^2.8.2
   
 dev_dependencies:
   riverpod_generator: ^2.3.0
