Fix: Update systemd service to use .pyenv Python and add yt-dlp to requirements

--- a/TwinklyWall/twinklywall.service
+++ b/TwinklyWall/twinklywall.service
@@ -7,11 +7,11 @@ Type=simple
 User=fpp
 Group=fpp
 WorkingDirectory=/home/fpp/TwinklyWall_Project/TwinklyWall
-Environment="PATH=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+Environment="PATH=/home/fpp/.pyenv/versions/3.12.12/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 Environment="PYTHONUNBUFFERED=1"
 Environment="TWINKLYWALL_DEBUG=1"
 Environment="FPP_MODEL_NAME=Light Wall"
-ExecStart=/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin/python main.py --mode api
+ExecStart=/home/fpp/.pyenv/versions/3.12.12/bin/python main.py --mode api
 KillSignal=SIGINT
 TimeoutStopSec=15
 Restart=always
