--- a/TwinklyWall/twinklywall.service
+++ b/TwinklyWall/twinklywall.service
@@ -7,7 +7,7 @@ Type=simple
 User=fpp
 Group=fpp
 WorkingDirectory=/home/fpp/TwinklyWall_Project/TwinklyWall
-Environment="PATH=/home/fpp/.pyenv/versions/3.12.12/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+Environment="PATH=/home/fpp/.pyenv/versions/3.12.12/bin:/home/fpp/TwinklyWall_Project/TwinklyWall/.venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 Environment="PYTHONUNBUFFERED=1"
 Environment="TWINKLYWALL_DEBUG=1"
 Environment="FPP_MODEL_NAME=Light Wall"
