Add release creation to GitHub Actions workflows

--- a/.github/workflows/python-windows.yml
+++ b/.github/workflows/python-windows.yml
@@ -40,3 +40,10 @@ jobs:
           name: TwinklyWall-exe
           path: dist/TwinklyWall.exe
           if-no-files-found: error
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/TwinklyWall.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
