--- a/.github/workflows/flutter-windows.yml
+++ b/.github/workflows/flutter-windows.yml
@@ -33,6 +33,9 @@ jobs:
         working-directory: led_matrix_controller
         run: flutter build windows --release
 
+      - name: Zip Release Directory
+        run: Compress-Archive -Path "led_matrix_controller/build/windows/x64/runner/Release" -DestinationPath "led_matrix_controller-windows-release.zip"
+
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
@@ -41,3 +44,10 @@ jobs:
             led_matrix_controller/build/windows/x64/runner/Release/
             led_matrix_controller/build/windows/x64/runner/Release/**
           if-no-files-found: warn
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: led_matrix_controller-windows-release.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
