--- a/.github/workflows/python-windows.yml
+++ b/.github/workflows/python-windows.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-windows-exe:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v4
