--- a/.github/workflows/python-windows.yml
+++ b/.github/workflows/python-windows.yml
@@ -50,6 +50,7 @@ jobs:
           if-no-files-found: error
 
       - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: dist/TwinklyWall.exe
